Added /domains/<domain_id>/create_default_soa endpoint
